--- a/html/index.html
+++ b/html/index.html
@@ -2,20 +2,25 @@
 <html>
 <head>
 <title>Sample1</title>
-<link rel="stylesheet" type="text/css" href="/Users/user/Desktop/NG/RegistrationForm/assets/css/home.css">
+<link rel="stylesheet" type="text/css" href="/RegistrationForm/assets/css/home.css">
 </head>
 <body>
 	
-	<div id = "Fixedheader" class="fixedheader"> 
+	<div id = "fixedheader" class="fixedheader"> 
     	<button class="button"> HOME </button>
         <button class = "button"> REGISTER </button>
         <button class = "button"> ABOUT </button>
 	</div>
+
     <div class= "textContainer">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
    </div>
-	<img  class="image" src="/Users/user/Desktop/NG/RegistrationForm/assets/images/478521_1368x912.jpg ">
-	<div id = "FixedFooter" class="fixedfooter"> Footer content </div>
+
+    <div id = "imagecontainer"  class="image">
+		<img  src="/RegistrationForm/assets/images/478521_1368x912.jpg ">
+	</div>
+
+	<div id = "fixedfooter" class="fixedfooter"> Contact Us </div>
 
 </body>
 </html>
