naming problem resolved, css reset added

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 	
-	<div id = "fixedheader" class="fixedheader"> 
-    	<button class="button"> HOME </button>
-        <button class = "button"> REGISTER </button>
-        <button class = "button"> ABOUT </button>
+	<div id = "fixedheader" class="fixedHeader"> 
+    	<button class="navigationButton"> HOME </button>
+        <button class = "navigationButton"> REGISTER </button>
+        <button class = "navigationButton"> ABOUT </button>
 	</div>
 
     <div class= "textContainer">
@@ -20,7 +20,7 @@
 		<img  src="/RegistrationForm/assets/images/478521_1368x912.jpg ">
 	</div>
 
-	<div id = "fixedfooter" class="fixedfooter"> Contact Us </div>
+	<div id = "fixedfooter" class="fixedFooter"> Contact Us </div>
 
 </body>
 </html>
