naming problem resolved, css reset added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 		<img  src="/RegistrationForm/assets/images/478521_1368x912.jpg ">
 	</div>
 
-	<div id = "fixedfooter" class="fixedFooter"> Contact Us </div>
+	<div id = "fixedfooter" class="fixedFooter"> 
+        Contact Us 
+    </div>
 
 </body>
 </html>
