header buttons replaced with hyperlinks

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
 	
 	<div id = "fixedheader" class="fixedHeader"> 
-    	<button class="navigationButton"> HOME </button>
-        <button class = "navigationButton"> REGISTER </button>
-        <button class = "navigationButton"> ABOUT </button>
+    	<a href="" class ="navigationButton" style="border-bottom: solid 5px wheat;"> HOME</a>
+        <a href="" class ="navigationButton"> REGISTER</a>
+        <a href="" class ="navigationButton"> ABOUT</a>
 	</div>
 
     <div class= "textContainer">
