--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
 	
 	<div id = "fixedheader" class="fixedHeader"> 
-    	<a href="" class ="navigationButton" style="border-bottom: solid 5px wheat;"> HOME</a>
-        <a href="" class ="navigationButton"> REGISTER</a>
+    	<a href="/RegistrationForm/index.html" class ="navigationButton" style="border-bottom: solid 5px wheat;"> HOME</a>
+        <a href="/RegistrationForm/html/registration.html" class ="navigationButton"> REGISTER</a>
         <a href="" class ="navigationButton"> ABOUT</a>
 	</div>
 
